--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,37 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+/*utilities*/
+.contenitore{
+    height: 100vh;
+    width: 100%;
+    position: relative;
+}
+
+img{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+h1{
+    position: absolute;
+    top: 85%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+/*fine utilities*/
+
+/*main 1*/
+#main-1{
+
+    background-color: red;
+}
+
+.h1-giallo{
+    color: yellow;
+}
+/*fine main 1*/
