[ADD] 2-3-parte-main

--- a/css/style.css
+++ b/css/style.css
@@ -37,3 +37,23 @@ h1{
     color: yellow;
 }
 /*fine main 1*/
+
+/*main 2*/
+#main-2{
+
+    background-color: green;
+}
+
+
+/*fine main 2*/
+
+/*main 1*/
+#main-3{
+
+    background-color: yellow;
+}
+
+.h1-verde{
+    color: green;
+}
+/*fine main 3*/
