--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,11 @@ h1{
     margin: 40px 20px 40px 20px;
 }
 
+a{
+    text-decoration: none;
+    color: black;
+}
+
 .h1-giallo{
     color: yellow;
 }
